--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
       {
         "html-has-lang": "off"
       }
+    ],
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
     ]
   }
 }
