--- a/.hintrc
+++ b/.hintrc
@@ -15,6 +15,9 @@
       {
         "list": "off"
       }
-    ]
+    ],
+    "axe/text-alternatives": "off",
+    "axe/forms": "off",
+    "no-inline-styles": "off"
   }
 }
